--- a/.editorconfig
+++ b/.editorconfig
@@ -2,3 +2,22 @@
 
 # IDE0058: Expression value is never used
 dotnet_diagnostic.IDE0058.severity = silent
+csharp_style_inlined_variable_declaration = true:suggestion
+csharp_style_allow_embedded_statements_on_same_line_experimental = true:silent
+csharp_style_allow_blank_lines_between_consecutive_braces_experimental = true:silent
+csharp_style_allow_blank_line_after_colon_in_constructor_initializer_experimental = true:silent
+csharp_new_line_before_open_brace = all
+csharp_style_var_elsewhere = false:warning
+csharp_new_line_before_else = true
+csharp_prefer_simple_using_statement = false:none
+csharp_prefer_braces = true:warning
+csharp_style_namespace_declarations = file_scoped:warning
+csharp_style_prefer_method_group_conversion = true:silent
+csharp_style_prefer_top_level_statements = true:silent
+csharp_style_unused_value_expression_statement_preference = discard_variable:silent
+csharp_preserve_single_line_statements = true
+
+[*.{cs,vb}]
+end_of_line = crlf
+dotnet_style_allow_multiple_blank_lines_experimental = true:silent
+dotnet_style_allow_statement_immediately_after_block_experimental = true:silent
